troubleshooting issue 3 (last commit suggests problem with overflow scrolling)

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -54,7 +54,10 @@ a[name] {
 
 /*Workaround for 'Fixed element disappears in Chrome'*/
 /*http://stackoverflow.com/a/14569741/996114*/
-html.has-anchors, body.has-anchors {height:100%;overflow:auto}
+html.has-anchors, body.has-anchors {
+  height: 100%;
+  overflow: scroll;
+}
 
 section.people-main {
     padding-top: 30px;
